--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 <!-- JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="js/script.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
